--- a/style.css
+++ b/style.css
@@ -48,3 +48,196 @@ form {
     margin: 0.75rem 0 2.5rem;
   }
 }
+
+fieldset {
+  border: none;
+  display: flex;
+
+  & legend {
+    text-transform: uppercase;
+    font-size: 0.62rem;
+    color: #4d5c57;
+    margin-bottom: 0.25rem;
+  }
+}
+
+fieldset:focus-within legend {
+  color: #1f8459;
+  font-weight: 700;
+}
+
+input,
+select {
+  flex: 1;
+  height: 3rem;
+  border-radius: 0.5rem;
+  border: 1px solid #cdd5d2;
+  padding: 0 1rem;
+  font-size: 0.87rem;
+  color: #1f2523;
+  background-color: transparent;
+  outline: none;
+}
+
+select {
+  appearance: none;
+  background-image: url(./img/chevron-down.svg);
+  background-repeat: no-repeat;
+  background-position: right 0.7rem top 50%;
+  background-size: 1.25rem auto;
+  cursor: pointer;
+}
+
+input::placeholder,
+select:invalid {
+  color: #4d5c57;
+}
+
+input:focus,
+select:focus {
+  border: 1.5px solid #1f8459
+}
+
+.inputs-row {
+  display: flex;
+  flex: 1;
+  gap: 1rem;
+  margin-top: 1rem;
+
+  & fieldset:first-child {
+    flex: 1;
+  }
+
+  & fieldset:last-child input {
+    max-width: 154px;
+  }
+}
+
+form button {
+  height: 3rem;
+  border-radius: 0.5rem;
+  border: none;
+  font-size: 0.87rem;
+  color: #fff;
+  background-color: #1f8459;
+  font-weight: 700;
+  padding: 1rem 1.25rem;
+  cursor: pointer;
+  margin-top: 2rem;
+  transition: background-color 0.2s;
+
+  &:hover {
+    background-color: #2cb178;
+  }
+
+}
+
+aside {
+  background-color: #f9fbfa;
+  border-radius: 1rem;
+  padding: 2.5rem;
+  max-width: 462px;
+  min-width: 600px;
+}
+
+aside header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom-width: 1px solid #e4ece9;
+  padding-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
+
+  & p {
+    color: #4d5c57;
+    font-weight: 400;
+    font-size: 1rem;
+
+    & span {
+      color: #4d5c57;
+      font-weight: 400;
+      font-size: 0.87rem;
+      text-transform: uppercase;
+    }
+
+    & i{
+      color: #cdd5d2;
+      margin: 0 0.5rem;
+      font-style: normal;
+    }
+  }
+
+  & h2 {
+    font-size: 1rem;
+    color: #1f2523;
+  }
+
+  & small {
+    color: #4d5c57;
+    font-weight: 400;
+    font-size: 0.75rem;
+    margin-right: 0.25rem;
+  }
+}
+
+aside ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-height: 310px;
+  min-height: 310px;
+}
+
+.expense {
+  display: flex;
+  align-items: center;
+  height: 38px;
+
+  & img:first-child {
+    width: 2rem;
+    height: 2rem;
+
+    margin-right: 0.75rem;
+  }
+
+  & > div {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+  }
+}
+
+.expense-info strong {
+  font-size: 0.87rem;
+  color: #1f2523;
+}
+
+.expense-info span {
+  font-size: 0.75rem;
+  color: #4d5c57;
+}
+
+.expense-amount {
+  font-size: 0.87rem;
+  color: #1f2523;
+  font-weight: 600;
+
+  & small {
+    color: #4d5c57;
+    font-weight: 400;
+    font-size: 0.75rem;
+    margin-right: 0.25rem;
+  }
+}
+
+.remove-icon {
+  height: 1rem;
+  margin-left: 0.5rem;
+  cursor: pointer;
+  transition: opacity 0.2s;
+
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
