--- a/style.css
+++ b/style.css
@@ -11,9 +11,11 @@
 
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+
   background-color: #e4ece9;
   color: #1f2523;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,6 +37,7 @@ form {
   border-radius: 1rem;
   padding: 2.5rem;
   max-width: 462px;
+
   display: flex;
   flex-direction: column;
 
@@ -57,7 +60,7 @@ fieldset {
     text-transform: uppercase;
     font-size: 0.62rem;
     color: #4d5c57;
-    margin-bottom: 0.25rem;
+    margin-bottom: .5rem;
   }
 }
 
@@ -70,7 +73,7 @@ input,
 select {
   flex: 1;
   height: 3rem;
-  border-radius: 0.5rem;
+  border-radius: .5rem;
   border: 1px solid #cdd5d2;
   padding: 0 1rem;
   font-size: 0.87rem;
@@ -81,11 +84,10 @@ select {
 
 select {
   appearance: none;
-  background-image: url(./img/chevron-down.svg);
+  background-image: url(img/chevron-down.svg);
   background-repeat: no-repeat;
   background-position: right 0.7rem top 50%;
   background-size: 1.25rem auto;
-  cursor: pointer;
 }
 
 input::placeholder,
@@ -95,17 +97,18 @@ select:invalid {
 
 input:focus,
 select:focus {
-  border: 1.5px solid #1f8459
+  border: 1.5px solid #1f8459;
 }
 
 .inputs-row {
   display: flex;
   flex: 1;
+
   gap: 1rem;
   margin-top: 1rem;
 
   & fieldset:first-child {
-    flex: 1;
+    flex: 1
   }
 
   & fieldset:last-child input {
@@ -115,21 +118,21 @@ select:focus {
 
 form button {
   height: 3rem;
-  border-radius: 0.5rem;
+  border-radius: .5rem;
   border: none;
   font-size: 0.87rem;
   color: #fff;
   background-color: #1f8459;
   font-weight: 700;
   padding: 1rem 1.25rem;
-  cursor: pointer;
   margin-top: 2rem;
+  cursor: pointer;
+
   transition: background-color 0.2s;
 
   &:hover {
     background-color: #2cb178;
   }
-
 }
 
 aside {
@@ -137,13 +140,15 @@ aside {
   border-radius: 1rem;
   padding: 2.5rem;
   max-width: 462px;
+
   min-width: 600px;
 }
 
 aside header {
   display: flex;
   justify-content: space-between;
-  border-bottom-width: 1px solid #e4ece9;
+
+  border-bottom: 1px solid #e4ece9;
   padding-bottom: 1.5rem;
   margin-bottom: 1.5rem;
 
@@ -155,11 +160,11 @@ aside header {
     & span {
       color: #4d5c57;
       font-weight: 400;
-      font-size: 0.87rem;
+      font-size: .675rem;
       text-transform: uppercase;
     }
 
-    & i{
+    & i {
       color: #cdd5d2;
       margin: 0 0.5rem;
       font-style: normal;
@@ -184,6 +189,7 @@ aside ul {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+
   max-height: 310px;
   min-height: 310px;
 }
@@ -208,17 +214,17 @@ aside ul {
 }
 
 .expense-info strong {
-  font-size: 0.87rem;
+  font-size: .87rem;
   color: #1f2523;
 }
 
 .expense-info span {
-  font-size: 0.75rem;
+  font-size: .75rem;
   color: #4d5c57;
 }
 
 .expense-amount {
-  font-size: 0.87rem;
+  font-size: .87rem;
   color: #1f2523;
   font-weight: 600;
 
@@ -232,7 +238,8 @@ aside ul {
 
 .remove-icon {
   height: 1rem;
-  margin-left: 0.5rem;
+  margin-left: .5rem;
+
   cursor: pointer;
   transition: opacity 0.2s;
 
@@ -293,4 +300,3 @@ aside ul {
     align-items: center;
   }
 }
-
